# pycatch22

./: .gitignore  MANIFEST.in  README.md  pyproject.toml  setup.py
.github/: CODE_OF_CONDUCT.md  SECURITY.md  run_linux_build.yaml
.github/workflows/: run_linux_build.yaml  run_unit_tests.yaml  run_windows_build.yaml
C/: CO_AutoCorr.c
src/C/: catch22_wrap.c
src/pycatch22/: catch22.py
tests/: testFeatures.py  test_features.py  testing.py  unit_tests.py
tests/benchmarks/expected_outputs/: test2_output.txt  testInfMinus_output.txt  testInf_output.txt  testNaN_output.txt  testShort_output.txt  testSinusoid_output.txt  test_output.txt
tests/benchmarks/inputs/: test2_input.txt  testInfMinus_input.txt  testInf_input.txt  testNaN_input.txt  testShort_input.txt  testSinusoid_input.txt  test_input.txt
